added list of Quest commands to check against parser

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,12 @@
 /out/production/Starcrash/globals/ThingAndThingHolder.class
 /out/production/Starcrash/globals/WT.class
 /out/production/Starcrash/globals/package.bluej
+/out/production/Starcrash/game/Game.ctxt
+/out/production/Starcrash/globals/Help.class
+/out/production/Starcrash/game/data/package.bluej
+/out/production/Starcrash/gameobjects/lists/tools/package.bluej
+/out/production/Starcrash/gameobjects/lists/package.bluej
+/out/production/Starcrash/gameobjects/special/package.bluej
+/out/production/Starcrash/game/Parser.ctxt
+/out/production/Starcrash/game/Starcrash.ctxt
+/out/production/Starcrash/gameobjects/Actor$1.class
