updated BlueJ files, fixed bug in help

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,5 @@
 /out/production/Starcrash/game/Parser.ctxt
 /out/production/Starcrash/game/Starcrash.ctxt
 /out/production/Starcrash/gameobjects/Actor$1.class
+/build/
+/src/globals/Help.class
